streamlit_out.log

  You can now view your Streamlit app in your browser.

  Local URL: http://localhost:8501
  Network URL: http://139.82.214.126:8501
  External URL: http://139.82.214.126:8501

  For better performance, install the Watchdog module:

  $ xcode-select --install
  $ pip install watchdog
            
2026-03-17 14:20:45.593 Uncaught app execution
Traceback (most recent call last):
  File "/Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages/streamlit/runtime/scriptrunner/exec_code.py", line 128, in exec_func_with_error_handling
    result = func()
             ^^^^^^
  File "/Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages/streamlit/runtime/scriptrunner/script_runner.py", line 669, in code_to_exec
    exec(code, module.__dict__)  # noqa: S102
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/giospmac/Desktop/ALFA/app.py", line 3, in <module>
    from ui.asset_analysis import render_asset_analysis_page
  File "/Users/giospmac/Desktop/ALFA/ui/asset_analysis.py", line 633
    submitted = st.form_submit_button("Analisar", , type="primary")
                                                  ^
SyntaxError: invalid syntax
  Stopping...
